Bug#43641 ndb_mgm_get_configuration fails fetching config  - Detect upgrade from version that does not have ConfigManager.  - Exclude ndb_mgmd nodes from previous version from config change protocol.